--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<body>
 		<h1>React Apps in One Repo</h1>
 		<ul>
-			<li><a href="./ShoppingCart/build/">Shopping Cart</a></li>
-			<li><a href="./ShoppingCart2/build/">Shopping Cart with Input</a></li>
+			<li><a href="./ShoppingCart/build/">1. Shopping Cart</a></li>
+			<li><a href="./ShoppingCart2/build/">2. Shopping Cart with Input</a></li>
 		</ul>
 	</body>
 </html>
