--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>React Apps in One Repo</h1>
 		<ul>
-			<li><a href="./ShoppingCart/build/">Shopping Cart</a></li>
+			<li><a href="./shoppingcart/build/">Shopping Cart</a></li>
 			<li><a href="./ShoppingCart2/build/">Shopping Cart with Input</a></li>
 		</ul>
 	</body>
