--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Mini React Apps</title>
-	</head>
-	<body>
-		<h1>React Apps in One Repo</h1>
-		<ul>
-			<li><a href="./shoppingcart/build/">Shopping Cart</a></li>
-			<li><a href="./ShoppingCart2/build/">Shopping Cart with Input</a></li>
-		</ul>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React Mini Projects</title>
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1>React Mini Projects</h1>
+    <!-- <ul class="list-group">
+      <li class="list-group-item">
+        <a href="./weather-icons/build/">1. Weather Icons</a>
+      </li>
+      <li class="list-group-item">
+        <a href="./react-cities/build/">2. React Cities</a>
+      </li>
+      <li class="list-group-item">
+        <a href="./shoppingcart/build/">3. Shopping Cart</a>
+      </li>
+      <li class="list-group-item">
+        <a href="./colored-divs/build/">4. Colored Divs</a>
+      </li> -->
+      <!-- <li class="list-group-item">
+        <a href="./render-giphy/build">4. Render Giphy</a>
+      </li>
+      <li class="list-group-item">
+        <a href="./tv-maze/build">5. TV Maze</a>
+      </li>
+      <li class="list-group-item">
+        <a href="./light-levels/build">6. Light Levels</a>
+      </li>
+      <li class="list-group-item">
+        <a href="./usehover-hook/build/">7. useHoverHook</a>
+      </li> -->
+    </ul>
+  </body>
 </html>
