weather-icon files update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <h1>React Mini Projects</h1>
-    <!-- <ul class="list-group">
+    <ul class="list-group">
       <li class="list-group-item">
         <a href="./weather-icons/build/">1. Weather Icons</a>
       </li>
@@ -33,9 +33,10 @@
       <li class="list-group-item">
         <a href="./shoppingcart/build/">3. Shopping Cart</a>
       </li>
-      <li class="list-group-item">
+	</ul>
+      <!-- <li class="list-group-item">
         <a href="./colored-divs/build/">4. Colored Divs</a>
-      </li> -->
+      </li> --> -->
       <!-- <li class="list-group-item">
         <a href="./render-giphy/build">4. Render Giphy</a>
       </li>
@@ -47,7 +48,7 @@
       </li>
       <li class="list-group-item">
         <a href="./usehover-hook/build/">7. useHoverHook</a>
-      </li> -->
-    </ul>
+      </li>
+   
   </body>
 </html>
