--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="./react-cities/build/">2. React Cities</a>
       </li>
       <li class="list-group-item">
-        <a href="./shoppingcart/build/">3. Shopping Cart</a>
+        <a href="./shopping-cart/build/">3. Shopping Cart</a>
       </li>
 	</ul>
       <!-- <li class="list-group-item">
