--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</li>
 
 			<li class="list-group-item">
-				<!-- <a href="./light-levels/build"> -->
+				<!-- <a href="./light-levels-redux/build"> -->
 				7. Light Levels
 				<!-- </a> -->
 			</li>
