--- a/tv-maze/public/index.html
+++ b/tv-maze/public/index.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="icon"
+			href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKxzAL_vqCcy5_5_6GHNP8vmOJKvQPGT-i3Q2OTohJMZkSbqyvsqfyy3_aw8jaM7p4qis&usqp=CAU"
+		/>
 		<title>tv-maze</title>
 	</head>
 	<body>
