using Link for back btn

--- a/react-movie/public/index.html
+++ b/react-movie/public/index.html
@@ -8,7 +8,7 @@
 			rel="icon"
 			href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKxzAL_vqCcy5_5_6GHNP8vmOJKvQPGT-i3Q2OTohJMZkSbqyvsqfyy3_aw8jaM7p4qis&usqp=CAU"
 		/>
-		<title>tv-maze</title>
+		<title>react-movie</title>
 	</head>
 	<body>
 		<div id="root"></div>
