--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 			</li>
 
 			<li class="list-group-item">
-				<!-- <a href="./tv-maze/build"> -->
+				<a href="https://ga-react-movie.netlify.app/">
 				6. TV Maze
-				<!-- </a> -->
+				</a>
 			</li>
 
-			<li class="list-group-item">
+			<!-- <li class="list-group-item">
 				<!-- <a href="./light-levels-redux/build"> -->
 				7. Light Levels
 				<!-- </a> -->
@@ -58,8 +58,8 @@
 			<li class="list-group-item">
 				<!-- <a href="./usehover-hook/build/"> -->
 				8. useHoverHook
-				<!-- </a> -->
-			</li>
+				</a> 
+			</li>-->
 		</ul>
 	</body>
 </html>
