--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 			</li>
 
 			<!-- <li class="list-group-item">
-				<!-- <a href="./light-levels-redux/build"> -->
+				 <a href="./light-levels-redux/build"> 
 				7. Light Levels
-				<!-- </a> -->
+				 </a> 
 			</li>
 
 			<li class="list-group-item">
-				<!-- <a href="./usehover-hook/build/"> -->
+			 <a href="./usehover-hook/build/"> 
 				8. useHoverHook
 				</a> 
-			</li>-->
+			</li> -->
 		</ul>
 	</body>
 </html>
